Add casual-bookmarks support

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -37,7 +37,7 @@ EMACS_CONFIG_DIR=$(HOME)/.config/emacs
 AVY_DIR=$(EMACS_CONFIG_DIR)/elpa/avy-20230420.404
 EMACS_ELPA_DIR=$(EMACS_CONFIG_DIR)/elpa
 PACKAGE_PATHS=-L $(AVY_DIR)			\
--L $(EMACS_ELPA_DIR)/compat-29.1.4.5		\
+-L $(EMACS_ELPA_DIR)/compat-30.0.0.0		\
 -L $(EMACS_ELPA_DIR)/seq-2.24			\
 -L $(EMACS_ELPA_DIR)/transient-current		\
 -L $(CASUAL_LIB_LISP_DIR)			\
@@ -46,6 +46,8 @@ PACKAGE_PATHS=-L $(AVY_DIR)			\
 -L $(CASUAL_BASE_DIR)/casual-info/lisp		\
 -L $(CASUAL_BASE_DIR)/casual-dired/lisp		\
 -L $(CASUAL_BASE_DIR)/casual-ibuffer/lisp	\
+-L $(CASUAL_BASE_DIR)/casual-re-builder/lisp	\
+-L $(CASUAL_BASE_DIR)/casual-bookmarks/lisp	\
 -L $(CASUAL_BASE_DIR)/casual-isearch
 
 .PHONY: tests compile regression
