Add support for Casual Agenda package.

--- a/lisp/Makefile
+++ b/lisp/Makefile
@@ -48,6 +48,7 @@ PACKAGE_PATHS=-L $(AVY_DIR)			\
 -L $(CASUAL_BASE_DIR)/casual-ibuffer/lisp	\
 -L $(CASUAL_BASE_DIR)/casual-re-builder/lisp	\
 -L $(CASUAL_BASE_DIR)/casual-bookmarks/lisp	\
+-L $(CASUAL_BASE_DIR)/casual-agenda/lisp	\
 -L $(CASUAL_BASE_DIR)/casual-isearch
 
 .PHONY: tests compile regression
